--- a/styles/colors.less
+++ b/styles/colors.less
@@ -5,25 +5,25 @@
 @import 'vendor/open-color';
 
 // Config
-@syntax-hue:          220;
-@syntax-saturation:   0%;
-@syntax-brightness:   24%;
+@syntax-hue:          240;
+@syntax-saturation:   24%;
+@syntax-brightness:   20%;
 
 // Monochrome
-@mono-1: hsl(@syntax-hue, 0%, 92%);
-@mono-2: hsl(@syntax-hue, 0%, 72%);
-@mono-3: hsl(@syntax-hue, 0%, 48%);
+@mono-1: hsl(@syntax-hue,  0%, 96%);
+@mono-2: hsl(@syntax-hue, 24%, 72%);
+@mono-3: hsl(@syntax-hue, 12%, 48%);
 
 // Colors
-@hue-1:   @mono-1;
+@hue-1:   @oc-blue-3;
 @hue-2:   @mono-1;
-@hue-3:   @mono-1;
-@hue-4:   @mono-1;
+@hue-3:   @oc-grape-3;
+@hue-4:   @oc-yellow-3;
 
-@hue-5:   @mono-1;
-@hue-5-2: @mono-1;
+@hue-5:   @oc-pink-4;
+@hue-5-2: @mono-3;
 
-@hue-6:   @mono-1;
+@hue-6:   @oc-orange-4;
 @hue-6-2: @mono-1;
 
 // Base colors
