Add HTML support

--- a/index.less
+++ b/index.less
@@ -12,6 +12,7 @@
 @import 'syntax/css';
 @import 'syntax/gfm';
 @import 'syntax/go';
+@import 'syntax/html';
 @import 'syntax/ini';
 @import 'syntax/java';
 @import 'syntax/js';
