Tweak language styles

--- a/styles/syntax/json.less
+++ b/styles/syntax/json.less
@@ -2,12 +2,15 @@
 /* SYNTAX: JSON */
 
 .source.json {
+  .punctuation {
+    color: @mono-3;
+  }
   .meta.structure.dictionary.json {
     & > .string.quoted.json {
       & > .punctuation.string {
-        color: @hue-5;
+        // color: @mono-3;
       }
-      color: @hue-5;
+      color: @hue-1;
     }
   }
 
