Remove deprecations in Atom 1.13

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,8 +1,7 @@
 
 /* EDITOR STYLES */
 
-atom-text-editor,
-:host {
+atom-text-editor {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
