--- a/styles/syntax/c.less
+++ b/styles/syntax/c.less
@@ -1,8 +1,8 @@
 
 /* SYNTAX: C */
 
-.source.c {
-  .keyword.operator {
+.syntax--source.syntax--c {
+  .syntax--keyword.syntax--operator {
     color: @hue-3;
   }
 }
