--- a/styles/syntax/cpp.less
+++ b/styles/syntax/cpp.less
@@ -1,8 +1,8 @@
 
 /* SYNTAX: C++ */
 
-.source.cpp {
-  .keyword.operator {
+.syntax--source.syntax--cpp {
+  .syntax--keyword.syntax--operator {
     color: @hue-3;
   }
 }
