--- a/styles/syntax/cs.less
+++ b/styles/syntax/cs.less
@@ -1,8 +1,8 @@
 
 /* SYNTAX: C# */
 
-.source.cs {
-  .keyword.operator {
+.syntax--source.syntax--cs {
+  .syntax--keyword.syntax--operator {
     color: @hue-3;
   }
 }
