--- a/styles/syntax/css.less
+++ b/styles/syntax/css.less
@@ -1,17 +1,17 @@
 
 /* SYNTAX: CSS */
 
-.source.css {
+.syntax--source.syntax--css {
   // highlight properties/values if they are supported
-  .property-name,
-  .property-value {
+  .syntax--property-name,
+  .syntax--property-value {
     color: @mono-2;
-    &.support {
+    &.syntax--support {
       color: @mono-1;
     }
   }
 
-  .punctuation {
+  .syntax--punctuation {
     color: @mono-3;
   }
 }
