--- a/styles/syntax/gfm.less
+++ b/styles/syntax/gfm.less
@@ -1,12 +1,12 @@
 
 /* SYNTAX: GITHUB-FLAVORED MARKDOWN */
 
-.source.gfm {
-  .markup {
+.syntax--source.syntax--gfm {
+  .syntax--markup {
     -webkit-font-smoothing: auto;
   }
 
-  .link .entity {
+  .syntax--link .syntax--entity {
     color: @hue-2;
   }
 }
