--- a/styles/syntax/html.less
+++ b/styles/syntax/html.less
@@ -2,11 +2,11 @@
 /* SYNTAX: HTML */
 
 // TODO: Figure out why HTML only styles correctly with .html instead of .source.html
-.html {
-  .entity.name.tag {
+.syntax--html {
+  .syntax--entity.syntax--name.syntax--tag {
     color: @hue-3;
   }
-  .meta.tag {
+  .syntax--meta.syntax--tag {
     color: @mono-3;
   }
 }
