--- a/styles/syntax/ini.less
+++ b/styles/syntax/ini.less
@@ -1,8 +1,8 @@
 
 /* SYNTAX: INI */
 
-.source.ini {
-  .keyword.other.definition.ini {
+.syntax--source.syntax--ini {
+  .syntax--keyword.syntax--other.syntax--definition.syntax--ini {
     color: @hue-5;
   }
 }
