--- a/styles/syntax/ruby.less
+++ b/styles/syntax/ruby.less
@@ -1,8 +1,8 @@
 
 /* SYNTAX: RUBY */
 
-.source.ruby {
-  .constant.other.symbol > .punctuation {
+.syntax--source.syntax--ruby {
+  .syntax--constant.syntax--other.syntax--symbol > .syntax--punctuation {
     color: inherit;
   }
 }
