--- a/styles/syntax/go.less
+++ b/styles/syntax/go.less
@@ -1,8 +1,8 @@
 
 /* SYNTAX: GO */
 
-.source.go {
-  .storage.type.string {
+.syntax--source.syntax--go {
+  .syntax--storage.syntax--type.syntax--string {
       color: @hue-3
   }
 }
