--- a/styles/syntax/python.less
+++ b/styles/syntax/python.less
@@ -1,12 +1,12 @@
 
 /* SYNTAX: PYTHON */
 
-.source.python {
-  .keyword.operator.logical.python {
+.syntax--source.syntax--python {
+  .syntax--keyword.syntax--operator.syntax--logical.syntax--python {
     color: @hue-3;
   }
 
-  .variable.parameter {
+  .syntax--variable.syntax--parameter {
     color: @hue-6;
   }
 }
