Add missing import for Handlebars/Mustache (Woops!)

--- a/index.less
+++ b/index.less
@@ -13,6 +13,7 @@
 @import 'syntax/gfm';
 @import 'syntax/go';
 @import 'syntax/html';
+@import 'syntax/hbs';
 @import 'syntax/ini';
 @import 'syntax/java';
 @import 'syntax/js';
