Add Elixir syntax styles

--- a/index.less
+++ b/index.less
@@ -10,6 +10,7 @@
 @import 'syntax/cpp';
 @import 'syntax/cs';
 @import 'syntax/css';
+@import 'syntax/elixir';
 @import 'syntax/gfm';
 @import 'syntax/go';
 @import 'syntax/html';
