swap string color to match pure syntax default

--- a/styles/syntax/elixir.less
+++ b/styles/syntax/elixir.less
@@ -2,32 +2,32 @@
 /* SYNTAX: ELIXIR */
 .syntax--source.syntax--elixir {
   .syntax--constant.syntax--definition,
-  .syntax--embedded.syntax--punctuation,
   .syntax--constant.syntax--language,
   .syntax--function {
     color: @hue-1;
-    .syntax--empty {
-      color: @hue-1;
-    }
   }
   .syntax--variable.syntax--definition,
-  .syntax--variable.syntax--anonymous{
+  .syntax--variable.syntax--anonymous,
+  .syntax--embedded.syntax--punctuation {
     color: @hue-3;
+    .syntax--empty {
+      color: @hue-3;
+    }
   }
   .syntax--keyword.syntax--special-method,
   .syntax--readwrite.syntax--module,
   .syntax--storage.syntax--type{
-    color: @hue-4;
+    color: @hue-5;
     > .syntax--punctuation {
-      color: @hue-4;
+      color: @hue-5;
     }
   }
   .syntax--regexp.syntax--section,
   .syntax--regexp.syntax--string,
   .syntax--quoted{
-    color: @hue-5;
+    color: @hue-4;
     > .syntax--punctuation{
-      color: @hue-5;
+      color: @hue-4;
     }
   }
   .syntax--separator,
@@ -40,7 +40,7 @@
   .syntax--scope,
   .syntax--section,
   .syntax--keyword.syntax--operator {
-    color: @mono-2;
+    color: @hue-5-2;
   }
   .syntax--source {
     color: @mono-1;
