Make structs a little brighter

--- a/styles/syntax/elixir.less
+++ b/styles/syntax/elixir.less
@@ -40,7 +40,7 @@
   .syntax--scope,
   .syntax--section,
   .syntax--keyword.syntax--operator {
-    color: @hue-5-2;
+    color: @mono-2;
   }
   .syntax--source {
     color: @mono-1;
