Fix import issue

--- a/index.less
+++ b/index.less
@@ -10,7 +10,7 @@
 @import 'syntax/cpp';
 @import 'syntax/cs';
 @import 'syntax/css';
-@import 'styles/syntax/elixir';
+@import 'syntax/elixir';
 @import 'syntax/gfm';
 @import 'syntax/go';
 @import 'syntax/html';
