--- a/styles/syntax/java.less
+++ b/styles/syntax/java.less
@@ -1,14 +1,13 @@
-
 /* SYNTAX: JAVA */
 
 .syntax--source.syntax--java {
   .syntax--storage {
     &.syntax--modifier.syntax--import {
-      color: @hue-6-2;
+      color: @hue-8;
     }
 
     &.syntax--type {
-      color: @hue-6-2;
+      color: @hue-8;
     }
   }
   .syntax--keyword.syntax--operator.syntax--instanceof {
