--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,4 +1,3 @@
-
 /* EDITOR STYLES */
 
 atom-text-editor {
@@ -43,18 +42,17 @@ atom-text-editor {
   .current-result .region.region.region {
     border-radius: 2px;
     background-color: @syntax-result-marker-color;
-    transition: border-color .4s;
+    transition: border-color 0.4s;
   }
   .find-result .region.region.region {
     border: 2px solid transparent;
   }
   .current-result .region.region.region {
     border: 2px solid @syntax-result-marker-color-selected;
-    transition-duration: .1s;
+    transition-duration: 0.1s;
   }
 
   .gutter {
-
     .line-number {
       color: @syntax-gutter-text-color;
       -webkit-font-smoothing: antialiased;
@@ -77,7 +75,7 @@ atom-text-editor {
         bottom: -3px;
       }
       &::after {
-        content: "";
+        content: '';
         position: absolute;
         left: 0px;
         bottom: 0px;
