--- a/styles/syntax/go.less
+++ b/styles/syntax/go.less
@@ -1,8 +1,7 @@
-
 /* SYNTAX: GO */
 
 .syntax--source.syntax--go {
   .syntax--storage.syntax--type.syntax--string {
-      color: @hue-3
+    color: @hue-3;
   }
 }
