--- a/styles/syntax/json.less
+++ b/styles/syntax/json.less
@@ -1,4 +1,3 @@
-
 /* SYNTAX: JSON */
 
 .syntax--source.syntax--json {
@@ -14,9 +13,13 @@
     }
   }
 
-  .syntax--meta.syntax--structure.syntax--dictionary.syntax--json, .syntax--meta.syntax--structure.syntax--array.syntax--json {
+  .syntax--meta.syntax--structure.syntax--dictionary.syntax--json,
+  .syntax--meta.syntax--structure.syntax--array.syntax--json {
     & > .syntax--value.syntax--json > .syntax--string.syntax--quoted.syntax--json,
-    & > .syntax--value.syntax--json > .syntax--string.syntax--quoted.syntax--json > .syntax--punctuation {
+    &
+      > .syntax--value.syntax--json
+      > .syntax--string.syntax--quoted.syntax--json
+      > .syntax--punctuation {
       color: @hue-4;
     }
 
