--- a/styles/palette.less
+++ b/styles/palette.less
@@ -1,19 +1,18 @@
 /* COLOR PALETTE */
 
-// Dependencies
 @import 'vendor/open-color';
 
-// Base color
+// Base Color
 @syntax-hue: 240;
 @syntax-saturation: 24%;
 @syntax-brightness: 20%;
 
-// Monochrome scale
+// Monochrome Colors
 @mono-1: hsl(@syntax-hue, 24%, 96%);
 @mono-2: hsl(@syntax-hue, 24%, 72%);
 @mono-3: hsl(@syntax-hue, 24%, 48%);
 
-// Hues
+// Syntax Colors
 @hue-1: @oc-blue-3;
 @hue-2: @oc-cyan-3;
 @hue-3: @oc-grape-3;
@@ -23,7 +22,7 @@
 @hue-7: @oc-orange-3;
 @hue-8: @oc-teal-3;
 
-// Definitions
+// Other Colors
 @syntax-fg: @mono-1;
 @syntax-bg: hsl(@syntax-hue, @syntax-saturation, @syntax-brightness);
 @syntax-gutter: @mono-3;
