Add styles for bracket matching

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -64,6 +64,10 @@ atom-text-editor {
       &.cursor-line-no-selection {
         background-color: transparent;
       }
+      &.bracket-matcher {
+        background-color: darken(@mono-3, 16%);
+        color: @mono-1;
+      }
 
       .icon-right {
         color: @syntax-text-color;
