Add missing & selector

--- a/styles/syntax/js.less
+++ b/styles/syntax/js.less
@@ -22,7 +22,7 @@
   .syntax--meta {
     &.syntax--brace,
     &.syntax--period,
-    .syntax--comma {
+    &.syntax--comma {
       color: @mono-3;
     }
   }
