--- a/styles/syntax/c.less
+++ b/styles/syntax/c.less
@@ -2,6 +2,31 @@
 
 .syntax--source.syntax--c {
   .syntax--keyword.syntax--operator {
-    color: @hue-3;
+    color: @hue-7;
+  }
+
+  .syntax--punctuation {
+    &.syntax--bracket,
+    &.syntax--terminator {
+      color: @mono-3;
+    }
+  }
+
+  .syntax--meta {
+    &.syntax--brace,
+    &.syntax--period,
+    &.syntax--comma {
+      color: @mono-3;
+    }
+  }
+
+  .syntax--assignment {
+    color: @mono-3;
+  }
+
+  .syntax--comparison,
+  .syntax--ternary,
+  .syntax--logical {
+    color: @hue-8;
   }
 }
