Add Clojure styles

--- a/index.less
+++ b/index.less
@@ -8,6 +8,7 @@
 @import 'syntax/_base';
 @import 'syntax/c';
 @import 'syntax/cpp';
+@import 'syntax/clojure';
 @import 'syntax/cs';
 @import 'syntax/css';
 @import 'syntax/elixir';
