--- a/index.less
+++ b/index.less
@@ -9,6 +9,7 @@
 @import 'syntax/c';
 @import 'syntax/cpp';
 @import 'syntax/clojure';
+@import 'syntax/coffee';
 @import 'syntax/cs';
 @import 'syntax/css';
 @import 'syntax/elixir';
