Add .less extension to imports
Some languages will not load without this!

--- a/index.less
+++ b/index.less
@@ -5,21 +5,21 @@
 @import 'editor';
 
 // Language support
-@import 'syntax/_base';
-@import 'syntax/c';
-@import 'syntax/cpp';
-@import 'syntax/clojure';
-@import 'syntax/coffee';
-@import 'syntax/cs';
-@import 'syntax/css';
-@import 'syntax/elixir';
-@import 'syntax/gfm';
-@import 'syntax/go';
-@import 'syntax/html';
-@import 'syntax/hbs';
-@import 'syntax/ini';
-@import 'syntax/java';
-@import 'syntax/js';
-@import 'syntax/json';
-@import 'syntax/python';
-@import 'syntax/ruby';
+@import 'syntax/_base.less';
+@import 'syntax/c.less';
+@import 'syntax/cpp.less';
+@import 'syntax/clojure.less';
+@import 'syntax/coffee.less';
+@import 'syntax/cs.less';
+@import 'syntax/css.less';
+@import 'syntax/elixir.less';
+@import 'syntax/gfm.less';
+@import 'syntax/go.less';
+@import 'syntax/html.less';
+@import 'syntax/hbs.less';
+@import 'syntax/ini.less';
+@import 'syntax/java.less';
+@import 'syntax/js.less';
+@import 'syntax/json.less';
+@import 'syntax/python.less';
+@import 'syntax/ruby.less';
