Minor tweaks to CSS styles

--- a/styles/syntax/css.less
+++ b/styles/syntax/css.less
@@ -28,8 +28,12 @@
         color: @hue-5;
       }
       &.syntax--id {
-        color: @hue-8;
+        color: @hue-6;
       }
     }
+  }
+
+  .syntax--variable {
+    color: @hue-8;
   }
 }
