--- a/styles/syntax/go.less
+++ b/styles/syntax/go.less
@@ -4,4 +4,30 @@
   .syntax--storage.syntax--type.syntax--string {
     color: @hue-3;
   }
+
+  .syntax--punctuation {
+    &.syntax--bracket,
+    &.syntax--comma {
+      color: @mono-3;
+    }
+  }
+
+  .syntax--meta {
+    &.syntax--brace,
+    &.syntax--period,
+    &.syntax--comma {
+      color: @mono-3;
+    }
+  }
+
+  .syntax--assignment.syntax--operator {
+    color: @mono-3;
+  }
+
+  .syntax--comparison,
+  .syntax--ternary,
+  .syntax--logical,
+  .syntax--arithmetic {
+    color: @hue-8;
+  }
 }
