Update Mustache / Handlebars styles

--- a/index.less
+++ b/index.less
@@ -16,10 +16,10 @@
 @import 'syntax/gfm.less';
 @import 'syntax/go.less';
 @import 'syntax/html.less';
-@import 'syntax/hbs.less';
 @import 'syntax/ini.less';
 @import 'syntax/java.less';
 @import 'syntax/js.less';
 @import 'syntax/json.less';
+@import 'syntax/mustache.less';
 @import 'syntax/python.less';
 @import 'syntax/ruby.less';
