--- a/styles/syntax/mustache.less
+++ b/styles/syntax/mustache.less
@@ -1,4 +1,4 @@
-/* SYNTAX: HANDLEBARS/MUSTACHE */
+/* SYNTAX: MUSTACHE / HANDLEBARS */
 
 .syntax--text.syntax--handlebars,
 .syntax--text.syntax--mustache {
@@ -16,12 +16,12 @@
     // {{#if handlebars}}
     //    ^^
     .syntax--entity.syntax--name {
-      color: @hue-5;
+      color: @hue-3;
     }
   }
   // {{#if handlebars}}
   //       ^^^^^^^^^^
   .syntax--meta.syntax--tag.syntax--template {
-    color: @hue-1;
+    color: @hue-5;
   }
 }
