Update INI styles
Assumes you have the language-ini package installed.

--- a/styles/syntax/ini.less
+++ b/styles/syntax/ini.less
@@ -2,6 +2,14 @@
 
 .syntax--source.syntax--ini {
   .syntax--keyword.syntax--other.syntax--definition.syntax--ini {
-    color: @hue-5;
+    color: @hue-7;
+  }
+
+  .syntax--entity.syntax--group-title {
+    color: @hue-3;
+  }
+
+  .syntax--punctuation {
+    color: @mono-3;
   }
 }
