Add LESS styles

--- a/index.less
+++ b/index.less
@@ -20,6 +20,7 @@
 @import 'syntax/java.less';
 @import 'syntax/js.less';
 @import 'syntax/json.less';
+@import 'syntax/less.less';
 @import 'syntax/mustache.less';
 @import 'syntax/python.less';
 @import 'syntax/ruby.less';
