Add Makefile styles

--- a/index.less
+++ b/index.less
@@ -21,6 +21,7 @@
 @import 'syntax/js.less';
 @import 'syntax/json.less';
 @import 'syntax/less.less';
+@import 'syntax/make.less';
 @import 'syntax/mustache.less';
 @import 'syntax/python.less';
 @import 'syntax/ruby.less';
