--- a/index.less
+++ b/index.less
@@ -23,5 +23,6 @@
 @import 'syntax/less.less';
 @import 'syntax/make.less';
 @import 'syntax/mustache.less';
+@import 'syntax/objc.less';
 @import 'syntax/python.less';
 @import 'syntax/ruby.less';
