Add Perl styles

--- a/index.less
+++ b/index.less
@@ -24,5 +24,6 @@
 @import 'syntax/make.less';
 @import 'syntax/mustache.less';
 @import 'syntax/objc.less';
+@import 'syntax/perl.less';
 @import 'syntax/python.less';
 @import 'syntax/ruby.less';
