--- a/index.less
+++ b/index.less
@@ -25,5 +25,6 @@
 @import 'syntax/mustache.less';
 @import 'syntax/objc.less';
 @import 'syntax/perl.less';
+@import 'syntax/php.less';
 @import 'syntax/python.less';
 @import 'syntax/ruby.less';
