Rename 'syntax' dir to 'languages' - closes #7

--- a/index.less
+++ b/index.less
@@ -5,28 +5,28 @@
 @import 'editor';
 
 // Language support
-@import 'syntax/_base.less';
-@import 'syntax/c.less';
-@import 'syntax/cpp.less';
-@import 'syntax/clojure.less';
-@import 'syntax/coffee.less';
-@import 'syntax/cs.less';
-@import 'syntax/css.less';
-@import 'syntax/elixir.less';
-@import 'syntax/gfm.less';
-@import 'syntax/go.less';
-@import 'syntax/html.less';
-@import 'syntax/ini.less';
-@import 'syntax/java.less';
-@import 'syntax/js.less';
-@import 'syntax/json.less';
-@import 'syntax/less.less';
-@import 'syntax/make.less';
-@import 'syntax/mustache.less';
-@import 'syntax/objc.less';
-@import 'syntax/perl.less';
-@import 'syntax/php.less';
-@import 'syntax/python.less';
-@import 'syntax/ruby.less';
-@import 'syntax/sh.less';
-@import 'syntax/yaml.less';
+@import 'languages/_base.less';
+@import 'languages/c.less';
+@import 'languages/cpp.less';
+@import 'languages/clojure.less';
+@import 'languages/coffee.less';
+@import 'languages/cs.less';
+@import 'languages/css.less';
+@import 'languages/elixir.less';
+@import 'languages/gfm.less';
+@import 'languages/go.less';
+@import 'languages/html.less';
+@import 'languages/ini.less';
+@import 'languages/java.less';
+@import 'languages/js.less';
+@import 'languages/json.less';
+@import 'languages/less.less';
+@import 'languages/make.less';
+@import 'languages/mustache.less';
+@import 'languages/objc.less';
+@import 'languages/perl.less';
+@import 'languages/php.less';
+@import 'languages/python.less';
+@import 'languages/ruby.less';
+@import 'languages/sh.less';
+@import 'languages/yaml.less';
