--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -96,6 +96,10 @@
 .syntax--string {
   color: @hue-4;
 
+  > .syntax--source, .syntax--embedded {
+    color: @mono-1;
+  }
+
   &.syntax--regexp {
     color: @hue-1;
 
@@ -288,7 +292,7 @@
   }
 
   &.syntax--link {
-    color: @hue-3;
+    color: @hue-1;
   }
 
   &.syntax--inserted {
