Update JavaScript styles

--- a/styles/languages/js.less
+++ b/styles/languages/js.less
@@ -14,7 +14,9 @@
   }
 
   .syntax--punctuation {
-    &.syntax--bracket {
+    &.syntax--bracket,
+    &.syntax--modules,
+    &.syntax--terminator {
       color: @mono-3;
     }
   }
