--- a/index.less
+++ b/index.less
@@ -4,7 +4,7 @@
 @import 'syntax-variables';
 @import 'editor';
 
-// Language support
+// Languages
 @import 'languages/_base.less';
 @import 'languages/c.less';
 @import 'languages/cpp.less';
