--- a/styles/palette.less
+++ b/styles/palette.less
@@ -8,19 +8,19 @@
 @syntax-brightness: 20%;
 
 // Monochrome Colors
-@mono-1: hsl(@syntax-hue, 32%, 90%);
-@mono-2: hsl(@syntax-hue, 32%, 70%);
-@mono-3: hsl(@syntax-hue, 24%, 50%);
+@mono-1: hsl(@syntax-hue, 24%, 96%);
+@mono-2: hsl(@syntax-hue, 24%, 72%);
+@mono-3: hsl(@syntax-hue, 24%, 48%);
 
 // Syntax Colors
-@hue-1: @oc-blue-4;
-@hue-2: @oc-green-3;
+@hue-1: @oc-green-3;
+@hue-2: @oc-blue-3;
 @hue-3: @oc-violet-3;
 @hue-4: @oc-yellow-3;
-@hue-5: @oc-cyan-4;
-@hue-6: @oc-indigo-4;
-@hue-7: @oc-pink-4;
-@hue-8: @oc-orange-3;
+@hue-5: @oc-grape-3;
+@hue-6: @oc-cyan-3;
+@hue-7: @oc-orange-4;
+@hue-8: @oc-pink-4;
 
 // Other Colors
 @syntax-fg: @mono-1;
