Update color palette final final for real

--- a/styles/palette.less
+++ b/styles/palette.less
@@ -13,14 +13,22 @@
 @mono-3: hsl(@syntax-hue, 24%, 48%);
 
 // Syntax Colors
+// @hue-1: @oc-green-3;
+// @hue-2: @oc-blue-3;
+// @hue-3: @oc-violet-3;
+// @hue-4: @oc-yellow-3;
+// @hue-5: @oc-grape-3;
+// @hue-6: @oc-cyan-3;
+// @hue-7: @oc-orange-4;
+// @hue-8: @oc-pink-4;
 @hue-1: @oc-green-3;
 @hue-2: @oc-blue-3;
 @hue-3: @oc-violet-3;
 @hue-4: @oc-yellow-3;
-@hue-5: @oc-grape-3;
+@hue-5: @oc-pink-4;
 @hue-6: @oc-cyan-3;
 @hue-7: @oc-orange-4;
-@hue-8: @oc-pink-4;
+@hue-8: @oc-grape-3;
 
 // Other Colors
 @syntax-fg: @mono-1;
